--- a/style/main.style.scss
+++ b/style/main.style.scss
@@ -2,6 +2,9 @@ body {
   margin:0;
   padding: 0;
   width: 100vw;
+  max-height: 100vh;
+  overflow-y: hidden;
+  background: orange;
 }
 
  /** custom imports */
