--- a/style/components/details.style.scss
+++ b/style/components/details.style.scss
@@ -1,10 +1,15 @@
 .details-content {
+
   top: 0;
   left: 42px;
   padding: 10px;
   position: fixed;
-
+  width: 100vw;
+  height: 100vh;
+  background: url("../static/images/bg.jpg") no-repeat;
+  background-size: cover;
 }
+
 img#Portrait {
   height: 200px;
   //height: 92px;
