--- a/style/components/sections.style.scss
+++ b/style/components/sections.style.scss
@@ -34,3 +34,10 @@
   background-size: cover;
   position: absolute;
 }
+
+.logo-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
