--- a/style/main.style.scss
+++ b/style/main.style.scss
@@ -1,8 +1,20 @@
+
+/**
+ * Dependencies
+ */
+
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
 @import '../node_modules/bootstrap/scss/functions';
 @import '../node_modules/bootstrap/scss/variables';
 @import '../node_modules/bootstrap/scss/mixins';
 
 @import '../node_modules/bootstrap/scss/reboot';
+
+
+/**
+ * Base Config
+ */
 
 body {
   display: block;
@@ -17,6 +29,9 @@ body {
   overflow-y: hidden;
 }
 
- /** custom imports */
+ /**
+  * custom imports
+  */
+
 @import 'components/details.style';
 @import 'components/sections.style';
