--- a/style/components/sections.style.scss
+++ b/style/components/sections.style.scss
@@ -13,6 +13,7 @@
   }
 
   .sub-title {
+    font-size: 1.4em;
     font-family: $font-family-text;
   }
 }
@@ -28,12 +29,13 @@
   bottom: 0;
   left: 85vw;
   cursor: pointer;
-  width: 64px;
+  width: 5rem;
   border-left: $color-accent 9px solid;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
 
   .chevron-wrapper {
-    height: 64px;
-    width: 64px;
+    height: 4rem;
+    width: 4rem;
 
     svg#icon-chevron-right {
       fill: $color-accent;
@@ -57,5 +59,5 @@
 }
 
 .logo-wrapper {
-  width: 420px;
+  width: 42rem;
 }
